--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Vite + React</title>
   </head>
   <body>
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="hidden" name="form-name" value="contact" />
+      <input type="text" name="first-Name" placeholder="First Name" required minlength="2" />
+      <input type="text" name="last-Name" placeholder="Last Name" required minlength="2" />
+      <input type="email" name="email" placeholder="Email Adress" minlength="5" required />
+      <textarea
+        name="message"
+        placeholder="Message"
+        minlength="10"
+        maxlength="250"
+        required
+      ></textarea>
+      <button type="submit" className="submit-btn">Submit</button>
+    </form>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
