--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>MoonGazer Ceremonies</title>
   </head>
   <body>
-    <form name="contact" netlify netlify-honeypot="bot-field" action="/SuccessPage" hidden>
+    <form name="contact" netlify netlify-honeypot="bot-field" action="/success" hidden>
       <input type="hidden" name="form-name" value="contact" />
       <input type="text" name="first-Name" placeholder="First Name" required minlength="2" />
       <input type="text" name="last-Name" placeholder="Last Name" required minlength="2" />
