add google search console connection

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="MoonGazer Ceremonies | Personal portfolio for celebrant Dee Robinson"
     />
+    <meta name="google-site-verification" content="9sVW4tjtzZYnn98I4wz9DCjqqcvwD8Qbv3OanMFVttY" />
     <title>MoonGazer Ceremonies</title>
   </head>
   <body>
